--- a/Circular-Navigation-Menu/index.html
+++ b/Circular-Navigation-Menu/index.html
@@ -37,6 +37,10 @@
         <li style="--i:7;">
             <a href="#"><i class="fa-solid fa-keyboard"></i></a>
         </li>
+
+        <div class="indicator">
+            
+        </div>
     </ul>
     <script>
         let menuToggle = document.querySelector('.toggle');
